--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "transition-style": "^0.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
